[tool.poetry]
name = "fastadr"
version = "0.0.0"
description = "An experiment implementing OpenADR 3.0 with FastAPI."
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
