[tool.poetry]
name = "fastadr"
version = "0.0.0"
description = "An experiment implementing OpenADR 3.0 with FastAPI."
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
pyjwt = "^2.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pre-commit = "^3.5.0"
pytest-watch = "^4.2.0"
uvicorn = "^0.23.2"


[tool.poetry.group.temp.dependencies]
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
