[project]
  name = "pulumi_authentik"
  description = "A Pulumi provider dynamically bridged from authentik."
  dependencies = ["parver>=0.2.1", "pulumi>=3.134.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "2024.10.0"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_authentik = ["py.typed", "pulumi-plugin.json"]
